--- a/src/templates/coupons.html
+++ b/src/templates/coupons.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <div class="container-fluid">
 
     <p class="text-center">
@@ -5,6 +6,8 @@
             Get available coupons
         </a>
     </p>
+
+    <hr>
 
     <div ng-if="Coupons">
         <table class="table table-bordered table-striped">
@@ -20,19 +23,104 @@
                     <th>{{ coupon.Code }}</th>
                     <th>{{ coupon.Description }}</th>
                     <th>
-                        <div class="col">
-    						<form method="POST" ng-submit="listCouponWhitelist">
-    							<button class="btn btn-primary" type="submit">Show whitelist</button>
-    						</form>
-    					</div>
-    					<div class="col">
-    						<form method="POST" ng-submit="listCouponWhitelist()">
-    							<button type="submit" class="btn btn-primary">Show history</button>
-    						</form>
-    					</div>
+                        <div class="col text-center">
+                            <form method="POST" ng-submit="listCouponWhitelist(couponName)">
+                                <button class="btn btn-primary" type="submit" ng-click="couponName = coupon.Code; CouponHistory = undefined;">Show whitelist</button>
+                            </form>
+                        </div>
+                        <div class="col text-center">
+                            <form method="POST" ng-submit="listCouponHistory(couponName)">
+                                <button class="btn btn-primary" type="submit" ng-click="couponName = coupon.Code; CouponWhitelist = undefined;">Show history</button>
+                            </form>
+                        </div>
                     </th>
                 </tr>
             </tbody>
-        </table>        
+        </table>
     </div>
+
+    <div class="results" ng-show="!!CouponWhitelist || !!CouponHistory">
+        <!-- For some reason ng-include does not work here -->
+        <div class="row results">
+            <div class="col-md-12">
+                <h1>{{ this.couponName }}</h1>
+            </div>
+
+            <div class="col-md-6">
+                <textarea class="form-control" ng-style="{'height':'22rem'}" ng-model="couponInputData"></textarea>
+            </div>
+            <div class="col-md-6">
+                <div class="alert alert-info">Enter multiple rows and click the appropriate button.</div>
+                <label>Example list for whitelisting / adding to history:</label>
+<pre>
+105
+131
+136
+</pre>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="addUserCouponWhitelist(couponName, couponInputData)">Whitelist users</button>
+                    <!-- <button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="addUserCouponHistory(couponInput)">Add to history</button> -->
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div ng-if="CouponWhitelist" class="col-md-6">
+                <div class="list-group-item list-group-item-warning">
+    				<strong>Coupon whitelist</strong>
+    			</div>
+
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr class="info">
+                            <th>User ID</th>
+                            <th>Clean user name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="user in CouponWhitelist.CouponWhitelist">
+                            <th>{{ user.UserID }}</th>
+                            <th>{{ user.CleanUserName }}</th>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div ng-if="CouponHistory" class="col-md-6">
+                <div class="list-group-item list-group-item-warning">
+    				<strong>Coupon history</strong>
+    			</div>
+
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr class="info">
+                            <th>User ID</th>
+                            <th>Clean user name</th>
+                            <th>Times used</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="user in CouponHistory.CouponHistory">
+                            <th>{{ user.UserID }}</th>
+                            <th>{{ user.CleanUserName }}</th>
+                            <th>{{ user.Used }}</th>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div ng-show="!!Coupons.length">
+        <hr>
+        <a class="btn btn-link" ng-click="advanced = !advanced">Show / Hide raw response</a>
+        <pre ng-show="advanced" readonly ng-style="{'height':'100%'}">{{ Coupons | json }}</pre>
+    </div>
+
+    <div ng-show="!!CouponWhitelist">
+        <pre ng-show="advanced" readonly ng-style="{'height':'100%'}">{{ CouponWhitelist | json }}</pre>
+    </div>
+
+    <div ng-show="!!CouponHistory">
+        <pre ng-show="advanced" readonly ng-style="{'height':'100%'}">{{ CouponHistory | json }}</pre>
+    </div>
+
 </div>
