--- a/src/templates/coupons.html
+++ b/src/templates/coupons.html
@@ -23,27 +23,30 @@
                     <th>{{ coupon.Code }}</th>
                     <th>{{ coupon.Description }}</th>
                     <th>
-                        <div class="col text-center">
-                            <form method="POST" ng-submit="listCouponWhitelist(couponName)">
-                                <button class="btn btn-primary" type="submit" ng-click="couponName = coupon.Code; CouponHistory = undefined;">Show whitelist</button>
-                            </form>
-                        </div>
-                        <div class="col text-center">
-                            <form method="POST" ng-submit="listCouponHistory(couponName)">
-                                <button class="btn btn-primary" type="submit" ng-click="couponName = coupon.Code; CouponWhitelist = undefined;">Show history</button>
-                            </form>
-                        </div>
+                        <form class="form-inline" method="POST">
+                            <div>
+                                <button class="btn btn-primary" type="submit" ng-click="couponName = coupon.Code; listCoupon(couponName)">
+                                    Edit
+                                </button>
+                                <button class="btn btn-primary" type="submit" ng-click="couponName = coupon.Code; listCouponWhitelist(couponName)">
+                                    Show whitelist
+                                </button>
+                                <button class="btn btn-primary" type="submit" ng-click="couponName = coupon.Code; listCouponHistory(couponName)">
+                                    Show history
+                                </button>
+                            </div>
+                        </form>
                     </th>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <div class="results" ng-show="!!CouponWhitelist || !!CouponHistory">
+    <div class="results" ng-show="!!CouponName">
         <!-- For some reason ng-include does not work here -->
         <div class="row results">
             <div class="col-md-12">
-                <h1>{{ this.couponName }}</h1>
+                <h1>{{ this.CouponName }}</h1>
             </div>
 
             <div class="col-md-6">
@@ -58,53 +61,59 @@
 136
 </pre>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="addUserCouponWhitelist(couponName, couponInputData)">Whitelist users</button>
+                    <button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="addUserCouponWhitelist(CouponName, couponInputData)">Whitelist users</button>
                     <!-- <button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="addUserCouponHistory(couponInput)">Add to history</button> -->
                 </div>
             </div>
         </div>
         <div class="row">
-            <div ng-if="CouponWhitelist" class="col-md-6">
-                <div class="list-group-item list-group-item-warning">
-    				<strong>Coupon whitelist</strong>
-    			</div>
 
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr class="info">
-                            <th>User ID</th>
-                            <th>Clean user name</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="user in CouponWhitelist.CouponWhitelist">
-                            <th>{{ user.UserID }}</th>
-                            <th>{{ user.CleanUserName }}</th>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="col-md-6">
+                <div ng-if="CouponWhitelist">
+                    <div class="list-group-item list-group-item-warning">
+                        <strong>Coupon whitelist</strong>
+                    </div>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr class="info">
+                                <th>User ID</th>
+                                <th>Clean user name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="user in CouponWhitelist.CouponWhitelist">
+                                <th>{{ user.UserID }}</th>
+                                <th>{{ user.CleanUserName }}</th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div ng-if="CouponHistory" class="col-md-6">
-                <div class="list-group-item list-group-item-warning">
-    				<strong>Coupon history</strong>
-    			</div>
 
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr class="info">
-                            <th>User ID</th>
-                            <th>Clean user name</th>
-                            <th>Times used</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="user in CouponHistory.CouponHistory">
-                            <th>{{ user.UserID }}</th>
-                            <th>{{ user.CleanUserName }}</th>
-                            <th>{{ user.Used }}</th>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="col-md-6">
+                <div ng-if="CouponHistory">
+                    <div class="list-group-item list-group-item-warning">
+                        <strong>Coupon history</strong>
+                    </div>
+
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr class="info">
+                                <th>User ID</th>
+                                <th>Clean user name</th>
+                                <th>Times used</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="user in CouponHistory.CouponHistory">
+                                <th>{{ user.UserID }}</th>
+                                <th>{{ user.CleanUserName }}</th>
+                                <th>{{ user.Used }}</th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
