--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -200,12 +200,25 @@
                 <div class="clearfix"></div>
             </div>
             <div class="list-group-item text-center">
-                <form method="POST" class="list-group-item text-center" ng-submit="logoutUser()">
-                    <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                    <button type="submit" href class="btn btn-warning">
-                        <span class="fa fa-power-off"></span> Logout user
-                    </button>
-                </form>
+                <div class="list-group-item text-center">
+                    <div class="col-md-6">
+                        <form method="POST" class="text-center" ng-submit="checkSpam()">
+                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                            <button type="submit" href class="btn btn-danger">
+                                <span class="fa fa-exclamation-triangle"></span> Check for spam
+                            </button>
+                        </form>
+                    </div>
+                    <div class="col-md-6">
+                        <form method="POST" class="text-center" ng-submit="logoutUser()">
+                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                            <button type="submit" href class="btn btn-warning">
+                                <span class="fa fa-power-off"></span> Logout user
+                            </button>
+                        </form>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
             </div>
 
             <div class="list-group-item">
